--- a/src/navigation/launch/navigation_params/costmap_common_params.yaml
+++ b/src/navigation/launch/navigation_params/costmap_common_params.yaml
@@ -10,4 +10,4 @@ transform_tolerance: 0.75
 
 observation_sources: laser_scan_sensor
 
-laser_scan_sensor: {sensor_frame: camera_depth_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true, expected_update_rate: 0.1}
+laser_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true, expected_update_rate: 0.1}
