--- a/src/navigation/launch/navigation_params/costmap_common_params.yaml
+++ b/src/navigation/launch/navigation_params/costmap_common_params.yaml
@@ -1,7 +1,8 @@
 obstacle_range: 12.0
 raytrace_range: 16.0
-footprint: [[-0.065, -0.025], [-0.065, 0.025], [0.085, 0.025], [0.06, 0.0], [0.085, -0.025]]
-#footprint: [[-0.265, -0.225], [-0.265, 0.225], [0.185, 0.225], [0.26, 0.0], [0.185, -0.225]]
+#footprint: [[-0.065, -0.025], [-0.065, 0.025], [0.085, 0.025], [0.06, 0.0], [0.085, -0.025]]
+#footprint: [[-0.1, -0.05], [-0.1, 0.05], [0.1, 0.05], [0.1, 0.0], [0.1, -0.05]]
+footprint: [[-0.15, -0.15], [-0.15, 0.15], [0.15, 0.15], [0.15, -0.15]]
 
 footprint_padding: 0.01
 #inflation_radius: 0.55
@@ -10,4 +11,4 @@ transform_tolerance: 0.75
 
 observation_sources: laser_scan_sensor
 
-laser_scan_sensor: {sensor_frame: base_link, data_type: LaserScan, topic: scan, marking: true, clearing: true, expected_update_rate: 0.1}
+laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: scan, marking: true, clearing: true, expected_update_rate: 0.1}
