Fixed some launch files and moved them around. Currently navigation is unstable

--- a/src/roslyn_launch/launch/navigation_params/base_local_planner_params.yaml
+++ b/src/roslyn_launch/launch/navigation_params/base_local_planner_params.yaml
@@ -15,7 +15,10 @@ TrajectoryPlannerROS:
 
   #robot description
   holonomic_robot: false
+  y_vels: 0
 
   #Tolerance values for goal reaching
   xy_goal_tolerance: 0.25
   yaw_goal_tolerance: 0.25
+
+  meter_scoring: true
