--- a/src/roslyn_launch/launch/navigation_params/base_local_planner_params.yaml
+++ b/src/roslyn_launch/launch/navigation_params/base_local_planner_params.yaml
@@ -1,12 +1,13 @@
 TrajectoryPlannerROS:
   #movement control
-  max_vel_x: 0.5
+  max_vel_x: 1.0
   min_vel_x: 0.1
-  max_rotational_vel: .5
+  max_rotational_vel: .8
   min_in_place_rotational_vel: 0.1
   acc_lim_th: 3.2
   acc_lim_x: 2.5
   acc_lim_y: 2.5
+  escape_vel: -0.2
 
   #local navigation settings
   oscillation_reset_dist: 0.05
@@ -18,6 +19,6 @@ TrajectoryPlannerROS:
 
   #Tolerance values for goal reaching
   xy_goal_tolerance: 0.5
-  yaw_goal_tolerance: 0.5
+  yaw_goal_tolerance: 0.25
 
   meter_scoring: true
