--- a/src/roslyn_launch/launch/navigation_params/costmap_common_params.yaml
+++ b/src/roslyn_launch/launch/navigation_params/costmap_common_params.yaml
@@ -1,14 +1,15 @@
-obstacle_range: 12.0
-raytrace_range: 16.0
+obstacle_range: 2.5
+raytrace_range: 4
 #footprint: [[-0.065, -0.025], [-0.065, 0.025], [0.085, 0.025], [0.06, 0.0], [0.085, -0.025]]
 #footprint: [[-0.1, -0.05], [-0.1, 0.05], [0.1, 0.05], [0.1, 0.0], [0.1, -0.05]]
-footprint: [[-0.2, -0.2], [-0.2, 0.2], [0.2, 0.2], [0.2, -0.2]]
+#footprint: [[-0.2, -0.2], [-0.2, 0.2], [0.2, 0.2], [0.2, -0.2]]
+footprint: [ [0.3302, -0.0508], [0.254, -0.0508], [0.254, -0.254], [-0.254, -0.254], [-0.254, 0.254], [0.254, 0.254], [0.254, 0.0508], [0.3302, 0.0508] ]
 
-footprint_padding: 0.01
-#inflation_radius: 0.55
+#footprint_padding: 0.01
+inflation_radius: 0.15
 
 transform_tolerance: 0.75
 
 observation_sources: laser_scan_sensor
 
-laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: scan, marking: true, clearing: true, expected_update_rate: 1.0}
+laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: scan, marking: true, clearing: true, expected_update_rate: 0.25}
